# NeoChat

./: .gitignore  Cargo.toml  LICENSE  REPORT.md
Android/: local.properties  settings.gradle.kts
Android/app/: build.gradle.kts
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/res/values-ru/: strings.xml
Desktop/: index.html  package-lock.json  package.json  vitest.config.ts
Desktop/src/: App.css  App.test.tsx  App.tsx  index.css  main.tsx
Desktop/src-tauri/: Cargo.toml  neochat.db.key  tauri.conf.json
Desktop/src-tauri/icons/: icon.icns
Desktop/src-tauri/src/: lib.rs  main.rs
Desktop/src/components/: ChatItem.test.tsx  ChatItem.tsx  ChatWindow.css  ChatWindow.test.tsx  ChatWindow.tsx  MessageBubble.test.tsx  MessageBubble.tsx  OnboardingScreen.css  OnboardingScreen.test.tsx  OnboardingScreen.tsx  PinLockScreen.css  PinLockScreen.tsx  Settings.css  Settings.test.tsx  Settings.tsx  Sidebar.css  Sidebar.test.tsx  Sidebar.tsx
Desktop/src/components/modals/: ContactsModal.css  ContactsModal.tsx  MyQRModal.css  MyQRModal.tsx  NewChatModal.css  NewChatModal.test.tsx  NewChatModal.tsx  QRScannerModal.css  QRScannerModal.test.tsx  QRScannerModal.tsx
Desktop/src/contexts/: ThemeContext.tsx
Desktop/src/i18n/: LanguageContext.test.tsx  LanguageContext.tsx  en.json  ru.json
Desktop/src/services/: MockService.ts  TauriService.test.ts  TauriService.ts
Desktop/src/test/: setup.ts
Desktop/src/types/: index.ts
Desktop/src/utils/: crypto.ts  time.test.ts  time.ts
crates/neochat-core/: Cargo.toml  uniffi.toml
crates/neochat-core/src/: api.rs  lib.rs  models.rs
crates/neochat-core/src/crypto/: mod.rs
crates/neochat-core/src/transport/: discovery.rs  dns_tunnel.rs  mesh.rs  mod.rs  relay.rs
crates/neochat-core/tests/: api_tests.rs  encryption_tests.rs  model_tests.rs
docs/: INTEGRATION.md  anti-censorship-transport.md  api-contract.md  backend-android.md  backend-desktop.md  dns-tunnel-explained.md  parallel-workflow.md  project-rules.md  sms-fallback-architecture.md  ui-ux-android.md  ui-ux-desktop.md
relay/: worker.js  wrangler.toml
(+12 files in other folders)
